feat: Add random name generator
Often it is hard to find names one likes, so you can start randomly
generating names to start looking for names you might like. Has
capabilities to slice the data to narrow search down to desirable
features, such as gender of name, first letter of name, popularity of
name (rank), and years name was in vogue.

Also cleaned up files by adding a utils.py for general purpose
functions. The plots.py was improved so that the user can now provide
either a single string or list of len 1 for the genders, which is then
extrapolated to match the length of names given.

--- a/babyname_tutorial.ipynb
+++ b/babyname_tutorial.ipynb
@@ -17,7 +17,8 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "from ssas import ssa_data\n",
-    "from plots import history_plot"
+    "from plots import history_plot\n",
+    "from generate_names import *"
    ]
   },
   {
@@ -142,6 +143,46 @@
     "\n",
     "fig, ax = plt.subplots()\n",
     "history_plot(ax, names, genders, name_data.national, plot_type='n')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Generate list of random names\n",
+    "\n",
+    "Trying to decide on a baby name but don't know where to start? Why not start by drawing from the database at random. Use the `generate_names()` function. Let's randomly draw 50 Female names."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "random_names = generate_names(name_data.national, n=50, pout=True, gender='F')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can slice the name database to narrow our selection down to satisfy our desired criteria. When `n=None` (default) then the generator returns all results that match our criteria. We can slice by gender, first letter of the name, rank, and year.\n",
+    "\n",
+    "Note that when considering data over multiple years (year_start!=year_end), that slicing by rank returns a name if it satisfied those conditions in any single year. Therefore, if you are looking for name that isn't too popular this is not gaurenteed to filter those results (as a name that fits your crteria in 1950, but is too popular in 2015, will still be returned as the 1950 result is valid while the 2015 isn't). If you want to reject a name that fails your criteria in any single year, then use `strict_rank_criteria=True` (Default: False)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "desirable_names = generate_names(name_data.national, pout=True, gender='F',\n",
+    "                                 first_letter = ['M', 'O', 'T'],\n",
+    "                                 rank_lower_bound=500, rank_upper_bound=100,\n",
+    "                                 year_start=1990, year_end=2000,\n",
+    "                                 strict_rank_criteria=True)"
    ]
   }
  ],
