docs: Update README with visualizations
Added another plot showing the name fraction of the Gospel Authours over
time.

--- a/babyname_tutorial.ipynb
+++ b/babyname_tutorial.ipynb
@@ -100,9 +100,10 @@
     "history_plot(ax, names, genders, top10_F, plot_type='rank', legend=True,\n",
     "#              highlight=['Emma', 'Mia'],\n",
     "             log_scale=False, ms=10, lw=2)\n",
-    "ax.set_title('Top 10 Female Names since 2000')\n",
-    "fig.savefig('Female_top10_2000.png', fmt='png', transparent=False,\n",
-    "            facecolor=fig.get_facecolor(), edgecolor='none', bbox_inches='tight')"
+    "\n",
+    "# ax.set_title('Top 10 Female Names since 2000')\n",
+    "# fig.savefig('Female_top10_2000.png', fmt='png', transparent=False,\n",
+    "#             facecolor=fig.get_facecolor(), edgecolor='none', bbox_inches='tight')"
    ]
   },
   {
@@ -118,11 +119,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "names = ['Bob', 'Tom', 'Dick', 'Matt']\n",
-    "genders = ['M']*len(names)\n",
+    "names = ['Matthew', 'Mark', 'Luke', 'John']\n",
     "\n",
     "fig, ax = plt.subplots()\n",
-    "history_plot(ax, names, genders, name_data.national, plot_type='f')"
+    "history_plot(ax, names, 'M', name_data.national, plot_type='f')\n",
+    "\n",
+    "# ax.set_title(\"Matthew, Mark, Luke, and John\", pad=15)\n",
+    "# fig.savefig('Gospel_Authours.png', fmt='png', transparent=False,\n",
+    "#             facecolor=fig.get_facecolor(), edgecolor='none', bbox_inches='tight')"
    ]
   },
   {
